displays type constraints as usual via C-mouse hovering. Ast translation
rules (command 'translations') already work with extra type constraints,
but the result omits the type of a matched constant. ML translation
functions (command 'print_ast_translation') based on Ast.unfold_ast etc.
work in the same manner, but more complex translations may require
manual changes: rare INCOMPATIBILITY.

* The Simplifier now supports special "congprocs", using keyword
'congproc' or 'weak_congproc' in the 'simproc_setup' command (or ML
antiquotation of the same name). See also
~~/src/HOL/Imperative_HOL/ex/Congproc_Ex.thy for further explanations
and examples.

* The attribute "cong_format" produces the internal format of Simplifier
"cong" rules, notably for congproc implementations.


*** Isabelle/VSCode Prover IDE ***

* General improvements: Persistent decorations for PIDE markup, correct
font and formatting in panels, and proper completions. Moreover, the
PIDE extension of the LSP now features additional protocol messages
(e.g. to obtain the set of Isabelle symbols) and more fine-grained
control for recoding of Unicode symbols.

* Active "sendback" markup can now be used via LSP code actions, e.g. to
insert proof methods from Sledgehammer output.

* Relevant Isabelle options can now be overriden from the
Isabelle/VSCode extension settings.


*** HOL ***

* Various declaration bundles support adhoc modification of notation,
notably like this:

  unbundle no list_syntax
  unbundle no list_enumeration_syntax
  unbundle no list_comprehension_syntax
  unbundle no relcomp_syntax
  unbundle no converse_syntax
  unbundle no rtrancl_syntax
  unbundle no trancl_syntax
  unbundle no reflcl_syntax
  unbundle no abs_syntax
  unbundle no floor_ceiling_syntax
  unbundle no uminus_syntax
  unbundle no funcset_syntax

This is more robust than individual 'no_syntax' / 'no_notation'
commands, which need to copy mixfix declarations from elsewhere and thus
break after changes in the library.
